5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1758_762.log
== TEST (2019-05-29 19:58:18) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n = int(input("Numero: "))
new = n[3:5]
i = i + 1
print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:58:49) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n = input("Numero: ")
new = n[3:5]
i = i + 1
print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:59:10) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n = input("Numero: ")
new = n[3:5]

print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:59:32) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n = input("Numero: ")
new = n[2:4]

print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:59:41) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n = input("Numero: ")
new = n[2:4]

print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:08:43) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n = input("Numero: ")
new = n[2:4]
i = 0

while (i < size(vet_mes)):
	if (new == 01):
		mes = vet_mes[i]
	else:
		(new == 02)
		mes = vet_mes[i]
	i = i + 1
	
print(mes)	
	
		
		
		
		
		
-- ERROR:
File "XXXX", line 9
    if (new == 01):
                ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:09:07) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n = input("Numero: ")
new = n[2:4]
i = 0

while (i < size(vet_mes)):
	if (new == 1):
		mes = vet_mes[i]
	else:
		(new == 2)
		mes = vet_mes[i]
	i = i + 1
	
print(mes)	
	
		
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:09:37) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n = input("Numero: ")
new = n[2:4]
i = 0

while (i < size(vet_mes)):
	if (new == "01"):
		mes = vet_mes[i]
	else:
		(new == "02")
		mes = vet_mes[i]
	i = i + 1
	
print(mes)	
	
		
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:15:36) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n = input("Numero: ")
new = int(n[2:4])
i = 0

if(new == 01):
	mes = 0
elif(new == 02):
	mes = 1
elif(new == 03):
	mes = 2
elif(new == 04):
	mes = 3
elif(new == 05):
	mes = 4
elif(new == 06):
	mes = 5
elif(new == 07):
	mes = 6
elif(new == 08):
	mes = 7
elif(new == 09):
	mes = 8
elif(new == 10):
	mes = 9
elif(new == 11):
	mes = 10
else:
	(new == 12)
	mes = 11
	
print(vet_mes[mes])	
	
		
		
		
		
		
-- ERROR:
File "XXXX", line 8
    if(new == 01):
               ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:16:20) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n = input("Numero: ")
new = int(n[2:4])
i = 0

if(new == 1):
	mes = 0
elif(new == 2):
	mes = 1
elif(new == 3):
	mes = 2
elif(new == 4):
	mes = 3
elif(new == 5):
	mes = 4
elif(new == 6):
	mes = 5
elif(new == 7):
	mes = 6
elif(new == 8):
	mes = 7
elif(new == 9):
	mes = 8
elif(new == 10):
	mes = 9
elif(new == 11):
	mes = 10
else:
	(new == 12)
	mes = 11
	
print(vet_mes[mes])	
	
		
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:16:47) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n = input("Numero: ")
new = int(n[2:4])
i = 0

if(new == 1):
	mes = 0
elif(new == 2):
	mes = 1
elif(new == 3):
	mes = 2
elif(new == 4):
	mes = 3
elif(new == 5):
	mes = 4
elif(new == 6):
	mes = 5
elif(new == 7):
	mes = 6
elif(new == 8):
	mes = 7
elif(new == 9):
	mes = 8
elif(new == 10):
	mes = 9
elif(new == 11):
	mes = 10
else:
	(new == 12)
	mes = 11
	
print(vet_mes[mes])	
	
		
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:18:24) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n = input("Numero: ")
new = int(n[2:4])
i = 0

if(new == 1):
	mes = 0
elif(new == 2):
	mes = 1
elif(new == 3):
	mes = 2
elif(new == 4):
	mes = 3
elif(new == 5):
	mes = 4
elif(new == 6):
	mes = 5
elif(new == 7):
	mes = 6
elif(new == 8):
	mes = 7
elif(new == 9):
	mes = 8
elif(new == 10):
	mes = 9
elif(new == 11):
	mes = 10
else:
	(new == 12)
	mes = 11
	
print(n[0:2], "de", vet_mes[mes], "de", n[4:])	
	
		
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 20:18:44) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
n = input("Numero: ")
new = int(n[2:4])
i = 0

if(new == 1):
	mes = 0
elif(new == 2):
	mes = 1
elif(new == 3):
	mes = 2
elif(new == 4):
	mes = 3
elif(new == 5):
	mes = 4
elif(new == 6):
	mes = 5
elif(new == 7):
	mes = 6
elif(new == 8):
	mes = 7
elif(new == 9):
	mes = 8
elif(new == 10):
	mes = 9
elif(new == 11):
	mes = 10
else:
	(new == 12)
	mes = 11
	
print(n[0:2], "de", vet_mes[mes], "de", n[4:])	
	
		
		
		
		
		
-- EXECUTION TIME:
0.603888
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
